[package]
name = "inxs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.12"
protoc = "2.28.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"]}
env_logger = { version = "0.11.2", features = ["auto-color"] }
log = "0.4.21"
walkdir = "2.5.0"
base64 = "0.22.0"
md5 = "0.7.0"
